# C_code

./: .gitignore  10.运算符  10.运算符.c  14.作用域规则.c  15.数组.传递数组给函数.c  15.数组.多维数组.c  16.枚举.c  6.数据类型  7.c_变量的申明和定义  7.c_变量的申明和定义.c  8.常量  9.存储类  CMakeLists.txt  C内存图.xlsx  ~$C内存图.xlsx
c++_basic_knowledge/: 1.1命名空间namespace.cpp  2.2 使用性 增强.cpp  2.3 变量检测增强.cpp  2.4 struct增强.cpp  2.5 c++中所有变量和函数都必须要有类型.cpp  2.6 新增bool类型关键字.cpp  2.7 三目运算符功能增强.cpp  2.8 const增强.cpp  2.8.1 const基础知识.cpp  2.8.2 C语言中的冒牌货.c  2.8.3 const 和 #define 的相同.cpp  2.8.4 const 和 #define的区别.cpp  2.9 真正的枚举.cpp  3.1.1 引用变量名.cpp  3.1.10 const引用的原理.cpp  3.1.11 const引用原理2.cpp  3.1.2 引用的概念.cpp  3.1.3 引用的规则.cpp  3.1.4 引用作为函数参数.cpp  3.1.5 引用的意义.cpp  3.1.6 引用的本质.cpp  3.1.7 引用作为函数的返回值(引用当左值).cpp  3.1.8 指针引用.cpp  3.1.9 const 引用.cpp  3.2 inline 内联函数.cpp  3.2.1 内联函数的基本概念.cpp  3.2.2 内联函数vs宏函数.cpp  3.2.2 多个默认参数.cpp  3.3 默认参数和站位参数.cpp  3.3.4 站位参数.cpp  3.4 函数重载.cpp  3.4.1 重载规则.cpp  3.4.2 调用准则.cpp  3.4.3 重载的底层实现(name mangling).cpp  3.4.4 函数重载与函数默认参数.cpp  3.4.5 函数重载和函数指针结合.cpp  4 类和对象.cpp  4.2 封装和访问控制 从struct说起.cpp  4.2.2 封装的访问属性.cpp  4.2.3 用class去封装带行为的类.cpp  (+39 more)
c_basic_knowledge/: .cproject  .project  06.数据类型.c  08.常量.c  09.extern.main.c  09.存储类.c  10.1.2 指定初始化器(C99).c  10.2 多维数组.c  10.4 函数、数组和指针.c  10.4.1 使用指针参数.c  10.7 指针和多维数组  10.7 指针和多维数组.c  10.7.1 指向多维数组的指针.c  10.指针和数组.c  13.函数.c  15.数组.c  15.数组.从函数返回数组.c  16.枚举  16.枚举.c  17.指针  17.指针.c  17.指针.指针的算数运算  17.指针.指针的算数运算.c  18.函数指针和回调函数.c  19.字符串.c  20.结构体.c  20.结构体.位域.c  20.结构体.指向结构的指针.c  20.结构体.结构体变量初始化.c  20.结构体.结构作为函数参数.c  20.结构体.访问结构成员.c  21.位域.c  22.typedef  22.typedef.c  (+9 more)
(+46 files in other folders)
