cmake_minimum_required(VERSION 3.13)
project(c_code C)

set(CMAKE_C_STANDARD 11)

add_executable(c_code
#        c_basic_knowledge/06.数据类型.c
#        c_basic_knowledge/07.c_变量的申明和定义.c
#        c_basic_knowledge/08.常量.c
#        c_basic_knowledge/09.extern.main.c
#        c_basic_knowledge/09.extern.wirte_extern.c
#        c_basic_knowledge/09.存储类.c
#        c_basic_knowledge/10.运算符.c
#        c_basic_knowledge/13.函数.c
#        c_basic_knowledge/14.作用域规则.c
#        c_basic_knowledge/15.数组.c
#        c_basic_knowledge/15.数组.从函数返回数组.c
#        c_basic_knowledge/15.数组.传递数组给函数.c
#        c_basic_knowledge/15.数组.多维数组.c
#        c_basic_knowledge/16.枚举.c
#        c_basic_knowledge/17.指针.c
#        c_basic_knowledge/17.指针.指针的算数运算.c
#        c_basic_knowledge/18.函数指针和回调函数.c
#        c_basic_knowledge/19.字符串.c
#        c_basic_knowledge/20.结构体.c
#        c_basic_knowledge/20.结构体.位域.c
#        c_basic_knowledge/20.结构体.指向结构的指针.c
#        c_basic_knowledge/20.结构体.结构体变量初始化.c
#        c_basic_knowledge/20.结构体.结构作为函数参数.c
#        c_basic_knowledge/20.结构体.访问结构成员.c
#        c_basic_knowledge/21.位域.c
#        c_basic_knowledge/22.typedef.c
        c_basic_knowledge/23.输入输出.c
#        c_basic_knowledge/24.文档的读写.c
        )